# octyl-new

./: Cargo.toml
src/: app.rs  component.rs  lib.rs  main.rs  message.rs  tui.rs
src/components/: editor.rs
src/local_components/: editor.rs  tui.rs
