[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
anyhow = "1"
crossterm = { version = "0.27", features = ["event-stream", "serde"] }
ratatui = { version = "0.26" }
uuid = { version = "1.8", features = ["v4"] }
log = "0.4"
fern = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
