[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]

# util
uuid = { version = "1.8", features = ["v4"] }
anyhow = "1"

# terminal
crossterm = { version = "0.28", features = ["event-stream", "serde"] }
ratatui = { version = "0.28" }

# logging
log = "0.4"
fern = "0.6"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
